--- a/AutomationISE/Properties/Resources.resx
+++ b/AutomationISE/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CancelSignIn" xml:space="preserve">
+    <value>User cancelled sign in</value>
+  </data>
   <data name="FoundAutomationAccounts" xml:space="preserve">
     <value>Found automation accounts</value>
   </data>
